--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -6,7 +6,7 @@
 	cursor: pointer;
 	font-size: 12px;
 	/* left: 0; */
-	right; 0
+	right: 0
 	margin-left: -100px;
 	padding: 5px 2px 5px 5px;
 	position: fixed;
@@ -26,7 +26,7 @@
 #waifu {
 	bottom: -1000px;
 	/* left: 0; */
-	right; 0
+	right: 0
 	line-height: 0;
 	position: fixed;
 	transform: translateY(3px);
