--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -62,6 +62,7 @@
 	transition: opacity 1s;
 	width: 250px;
 	word-break: break-all;
+	/* display: none !important; */
 }
 
 #waifu-tips.waifu-tips-active {
