--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -1,3 +1,4 @@
+/* 看板娘隐藏后的“看板娘”按钮 */
 #waifu-toggle {
 	background-color: #fa0;
 	border-radius: 5px;
@@ -22,6 +23,7 @@
 	margin-left: -30px;
 }
 
+/* 看板娘主体 */
 #waifu {
 	bottom: -1000px;
 	left: 0;
@@ -44,6 +46,7 @@
 	}
 }
 
+/* 看板娘对话框 */
 #waifu-tips {
 	animation: shake 50s ease-in-out 5s infinite;
 	background-color: rgba(236, 217, 188, .5);
@@ -70,21 +73,23 @@
 	transition: opacity .2s;
 }
 
+/* 对话框特殊文字的颜色 */
 #waifu-tips span {
 	color: #0099cc;
 }
 
 #waifu #live2d {
 	cursor: grab;
-	height: 300px;
+	height: 300px; /* 看板娘高 */
 	position: relative;
-	width: 300px;
+	width: 300px; /* 看板娘宽 */
 }
 
 #waifu #live2d:active {
 	cursor: grabbing;
 }
 
+/* 工具栏 */
 #waifu-tool {
 	color: #aaa;
 	opacity: 0;
@@ -100,14 +105,15 @@
 }
 
 #waifu-tool span {
-	color: #5b6c7d;
+	color: #5b6c7d; /* 工具栏颜色 */
 	cursor: pointer;
 	display: block;
-	line-height: 30px;
+	line-height: 30px; /*，工具栏各图标间距 */
 	text-align: center;
 	transition: color .3s;
 }
 
+/* 工具栏触碰后的颜色 */
 #waifu-tool span:hover {
 	color: #0684bd;
 	/* color: #34495e; */
