--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -7,12 +7,16 @@
 	cursor: pointer;
 	font-size: 12px;
 	left: 0;
+	/* right: 0; */
 	margin-left: -100px;
+	/* margin-right: -100px; */
 	padding: 5px 2px 5px 5px;
 	position: fixed;
 	transition: margin-left 1s;
+	/* transition: margin-right 1s; */
 	width: 60px;
 	writing-mode: vertical-rl;
+	/* writing-mode: vertical-lr; */
 }
 
 #waifu-toggle.waifu-toggle-active {
@@ -33,7 +37,7 @@
 	transform: translateY(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	/* z-index: 1; */
-	z-index: 1000 !important;
+	z-index: 1000;
 }
 
 #waifu:hover {
