--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -13,10 +13,10 @@
 	padding: 5px 2px 5px 5px;
 	position: fixed;
 	transition: margin-left 1s;
-	/* transition: margin-right 1s; */
+	/* transition: margin-right 1s !important; */
 	width: 60px;
 	writing-mode: vertical-rl;
-	/* writing-mode: vertical-lr; */
+	/* writing-mode: vertical-lr !important; */
 	z-index: 1000;
 }
 
@@ -38,10 +38,10 @@
 	line-height: 0;
 	position: fixed;
 	transform: translateY(3px);
-	/* transform: translateY(14px); !important*/
+	/* transform: translateY(14px) !important; */
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
-	/* z-index: 1; */
-	z-index: 1000;
+	z-index: 1;
+	z-index: 1000 !important;
 }
 
 #waifu:hover {
