--- a/live2d/waifu.css
+++ b/live2d/waifu.css
@@ -38,6 +38,7 @@
 	line-height: 0;
 	position: fixed;
 	transform: translateY(3px);
+	/* margin-bottom: -10px; */
 	/* transform: translateY(14px) !important; */
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
