--- a/page/effect/main.css
+++ b/page/effect/main.css
@@ -1,4 +1,4 @@
-div.block-main {
+div.pfis-effect-block-main {
     height: 600px;
     width: 700px;
     position: absolute;
@@ -8,14 +8,14 @@ div.block-main {
     margin-left: -350px;
 }
 
-div.panel {
+div.pfis-effect-panel {
     background-color: white;
     height: 500px;
     width: 700px;
     border-radius: 50px;
 }
 
-div.title {
+div.pfis-effect-title {
     background-color: white;
     height: 80px;
     width: 500px;
@@ -23,45 +23,45 @@ div.title {
     margin: 0px 100px 20px 100px;
 }
 
-h1.title {
+h1.pfis-effect-title {
     height: 30px;
     width: 210px;
     padding: 25px 145px;
     margin: 0px;
 }
 
-div.block {
+div.pfis-effect-block {
     display: flex;
     margin-bottom: 10px;
     height: 36px !important;
 }
 
-div.block-long {
+div.pfis-effect-block-long {
     width: 522px;
     height: 36px;
 }
 
-div.block-short {
+div.pfis-effect-block-short {
     width: 88px;
     height: 36px;
 }
 
-div.block-shorter {
+div.pfis-effect-block-shorter {
     width: 44px;
     height: 36px;
 }
 
-div.block-yes {
+div.pfis-effect-block-yes {
     right: 45px;
     bottom: 45px;
     position: absolute;
 }
 
-div.image {
+div.pfis-effect-image {
     background-image: url("https://api.btstu.cn/sjbz/api.php?lx=dongman&format=images?name=menu");
     height: 200px;
 }
 
-div.pfis.block-tab-2 {
+div.pfis-effect-block-tab-2 {
     height: 394px;
 }
