--- a/page/effect/Live2D/live2d-widget/waifu_right.css
+++ b/page/effect/Live2D/live2d-widget/waifu_right.css
@@ -31,10 +31,9 @@
 	line-height: 0;
 	position: fixed;
 	transform: translateY(3px);
-	/* transform: translateY(14px) !important; */
+	/* margin-bottom: -10px; */
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
-	z-index: 1;
-	z-index: 1000 !important;
+	z-index: 1000;
 }
 
 #waifu:hover {
@@ -89,7 +88,6 @@
 	color: #aaa;
 	opacity: 0;
 	position: absolute;
-	/* right: 10px; */
 	left: 10px;
 	top: 55px;
 	transition: opacity 1s;
